--- a/KortSagt/Base.lproj/Main.storyboard
+++ b/KortSagt/Base.lproj/Main.storyboard
@@ -53,6 +53,9 @@
                                 <state key="normal" title="Overrask mig">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="SupriceMe:" destination="9pv-A4-QxB" eventType="touchUpInside" id="xoF-Ou-SEy"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="I tvivl om hvad du vil se?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3a-kB-O7p">
                                 <rect key="frame" x="16" y="284" width="568" height="21"/>
